[package]
name = "nom-packrat-macros"
version = "0.1.4-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
description = "A helper crate of nom-packrat"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.18", features = ["full", "fold", "parsing", "extra-traits"] }
quote = "0.6.9"
