[package]
name = "nom-packrat-macros"
version = "0.1.18"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
description = "Helper crate of nom-packrat"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn   = {version = "1.0.0", features = ["full", "fold", "parsing", "extra-traits"]}

[package.metadata.release]
disable-tag = true
