[package]
name = "nom-packrat-macros"
version = "0.6.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
description = "Helper crate of nom-packrat"
edition = "2018"

[package.metadata.release]
disable-tag = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn   = {version = "2.0.5", features = ["full", "fold", "parsing", "extra-traits"]}
