[package]
name = "nom-packrat"
version = "0.1.17"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "An extension of nom to apply Packrat Parsing"
edition = "2018"

[package.metadata.release]
disable-tag = true
pre-release-replacements = [
    {file = "../README.md", search = "nom-packrat = \"[a-z0-9\\.-]+\"", replace = "nom-packrat = \"{{version}}\""},
]

[dependencies]
nom_locate         = { version = "0.4.0", path = "../../nom_locate" }
nom-packrat-macros = { version = "0.1.16", path = "../nom-packrat-macros" }

[dev-dependencies]
nom         = "5.0.0"
stats_alloc = "0.1.8"
