[package]
name = "nom-packrat"
version = "0.1.18"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "An extension of nom to apply Packrat Parsing"
edition = "2018"

[dependencies]
nom_locate         = {git = "https://github.com/fflorent/nom_locate", version = "0.4.0"}
nom-packrat-macros = {path = "../nom-packrat-macros", version = "0.1.16"}

[dev-dependencies]
nom         = "5.0.0"
stats_alloc = "0.1.8"

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "nom-packrat = \"[a-z0-9\\.-]+\"", replace = "nom-packrat = \"{{version}}\""},
    {file = "../CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "../CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/nom-packrat/compare/v{{version}}...Unreleased) - ReleaseDate"},
]
