[package]
name = "nom-packrat"
version = "0.3.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-packrat"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Extension of nom to apply Packrat Parsing"
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "nom-packrat = \"[a-z0-9\\.-]+\"", replace = "nom-packrat = \"{{version}}\""},
    {file = "../CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "../CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/nom-packrat/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
nom_locate         = "1.0.0"
nom_locate2        = {version = "2.0.0", package = "nom_locate"}
nom-packrat-macros = {path = "../nom-packrat-macros", version = "^0.3.0"}

[dev-dependencies]
nom         = "5.0.0"
stats_alloc = "0.1.8"
